fix: fixed html data-screen-max="9999"